[package]
name = "asn1-cereal"
version = "0.2.0"
authors = ["Josh <keeperofdakeys@gmail.com>"]
description = "ASN.1 and BER serialization"
repository = "https://github.com/keeperofdakeys/asn1-rs"
documentation = "https://docs.rs/asn1-cereal"
keywords = ["asn1", "ber", "der"]
license = "MIT/Apache-2.0"

[lib]
path="src/lib.rs"

[dependencies]
clippy = { version = "^0", optional = true }
log = "^0"
asn1-cereal-derive = { path = "../asn1-cereal-derive" }

[features]
default = []
