[package]
name = "asn1-utils"
version = "0.1.0"
authors = ["Josh <keeperofdakeys@gmail.com>"]

[dependencies]
argparse = "0.2"
serde = "0.7"
serde_json = "0.7"
asn1-cereal = { path = "../asn1-cereal" }

[[bin]]
path="src/ber-dump.rs"
name="ber-dump"

[[bin]]
path="src/ber-json-decode.rs"
name="ber-json-decode"

[[bin]]
path="src/simple.rs"
name="simple"

# [[bin]]
# path="src/snmp-decode.rs"
# name="snmp-decode"
